<resources>
    <string name="app_name">Pal Express</string>
    <string name="image_description">project logo</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="log_in">log in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_uplogin">Already have an account? Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Settings">settings</string>
    <string name="Orders">orders</string>
    <string name="foodname">Rice</string>
    <string name="refreshhome">Tap to refresh</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="no_orders">No orders yet</string>
    <string name="no_food">No Food Yet \n Tap To Refresh</string>
</resources>
